Alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ nav {
 	display: flex;
 	height: 2.5rem;
 	width: 100vw;
-	padding: 0 2%;
+	padding: 0 5vw;
 }
 
 nav ul {
